k8s/namespaces/monitoring/tempo/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tempo-https
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tempo.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: tempo
          port: 3100
  tls:
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tempo-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`tempo.oglesby.io`)
      kind: Rule
      middlewares:
      - name: internal-whitelist
        namespace: traefik
      - name: redirect-https
        namespace: traefik
      services:
        - name: tempo
          port: 3100
